# rules_pytest

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  registry_test.py
bazel_registry/modules/rules_pytest/: metadata.json
bazel_registry/modules/rules_pytest/0.3/: MODULE.bazel  source.json
build_rules/: pytest.bzl
example/: BUILD  MODULE.bazel  one_test.py  two_test.py
