module(
    name = "example_pytest",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_pytest", version = "0.3")
local_path_override(
    module_name = "rules_pytest",
    path = "../",
)

# Set up the interpreter
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version="3.13")

# Load the Python dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "third_party",
    requirements_lock = "//:requirements.lock",
    python_version = "3.13"
)
use_repo(pip, "third_party")
